# homicide-clearance-rates-and-budgets

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: 2022_tx_homicide_universe.csv
data/: README.md
docs/: case-level-approach.md  identification-strategy.md  literature-review.md  tx-homicide-units-organization.md
