[project]
name = "homicide-clearance-budgets"
version = "0.1.0"
description = "Empirical test of the relationship between homicide detective FTE ratios and clearance rates in Texas cities"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tenacity>=9.0",
]

[dependency-groups]
analysis = [
    "statsmodels>=0.14",
    "linearmodels>=6.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "jupyter>=1.0",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
